fixed sidebar and made zoom control visible (lower)

--- a/static/grayscale/css/grayscale.css
+++ b/static/grayscale/css/grayscale.css
@@ -99,6 +99,12 @@ a:focus {
     outline: 0;
 }
 
+.olControlZoom{
+  margin-top: 50px;
+  left: 5px;
+}
+
+
 @media(min-width:767px) {
     .navbar {
         padding: 20px 0;
@@ -113,10 +119,12 @@ a:focus {
     .top-nav-collapse {
         padding: 0;
         background-color: #42424a;
+
     }
 
     .navbar-custom.top-nav-collapse {
         border-bottom: 1px solid rgba(255,255,255,.3);
+
     }
 }
 
@@ -317,9 +325,7 @@ a:focus {
   top: 0;
   right: 350px; }
 
-iframe{
-    overflow:hidden;
-}
+
 
 /*.sidebar {
         width: 20%;
@@ -337,7 +343,9 @@ iframe{
   right: 0;
   bottom: 0; }
 
-
+#info {
+    padding-top: 20px;
+}
 
 /*#details-form {
   padding: 15px 15px 10px;
